--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 </head>
 <body>
 
-<h1 onclick="changetitle1">This is a Heading</h1>
-<p onclick="changetitle2">This is a paragraph.</p>
+<h1 onclick="changetitle1()">This is a Heading</h1>
+<p onclick="changetitle2()">This is a paragraph.</p>
 
 <script>
-function changetitle1{
+function changetitle1(){
 document.title = "Changetitle1 worked.";
 }
-function changetitle2{
+function changetitle2(){
 window.top.document.title = "Changetitle2 worked.
 }
 </script>
@@ -21,24 +21,24 @@ window.top.document.title = "Changetitle2 worked.
 
 
 <xmp>
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-<head>
-<title>-</title>
-</head>
+  <head>
+    <title>-</title>
+  </head>
 <body>
 
-<h1 onclick="changetitle1">This is a Heading</h1>
-<p onclick="changetitle2">This is a paragraph.</p>
+  <h1 onclick="changetitle1()">This is a Heading</h1>
+    <p onclick="changetitle2()">This is a paragraph.</p>
 
-<script>
-function changetitle1{
-document.title = "Changetitle1 worked.";
-}
-function changetitle2{
-window.top.document.title = "Changetitle2 worked.
-}
-</script>
+  <script>
+  function changetitle1(){
+    document.title = "Changetitle1 worked.";
+  }
+  function changetitle2(){
+    window.top.document.title = "Changetitle2 worked.
+  }
+  </script>
 </body>
 </html>
 </xmp>
