--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ function changetitle1(){
 document.title = "Changetitle1 worked.";
 }
 function changetitle2(){
-window.top.document.title = "Changetitle2 worked.
+window.top.document.title = "Changetitle2 worked.";
 }
 </script>
 </body>
@@ -36,7 +36,7 @@ window.top.document.title = "Changetitle2 worked.
     document.title = "Changetitle1 worked.";
   }
   function changetitle2(){
-    window.top.document.title = "Changetitle2 worked.
+    window.top.document.title = "Changetitle2 worked.";
   }
   </script>
 </body>
