--- a/testing2.html
+++ b/testing2.html
@@ -12,7 +12,7 @@
   <script>
   function changetitle1(userInput){
     document.getElementById("val").innerHTML = userInput;
-    document.title = "userInput";
+    document.title = userInput;
   }
   </script>
 </body>
@@ -33,7 +33,7 @@
   <script>
   function changetitle1(userInput){
     document.getElementById("val").innerHTML = userInput;
-    document.title = "userInput";
+    document.title = userInput;
   }
   </script>
 </body>
