--- a/index.html
+++ b/index.html
@@ -1,44 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>-</title>
-</head>
-<body>
-
-<h1 onclick="changetitle1()">This is a Heading</h1>
-<p onclick="changetitle2()">This is a paragraph.</p>
-
-<script>
-function changetitle1(){
-document.title = "Changetitle1 worked.";
-}
-function changetitle2(){
-window.top.document.title = "Changetitle2 worked.";
-}
-</script>
-</body>
-</html>
-
-
-<xmp>
-<!DOCTYPE html>
-<html>
   <head>
-    <title>-</title>
+    <title>Copy of 2023 Argument Essay : Graphic Organizer</title>
   </head>
-<body>
-
-  <h1 onclick="changetitle1()">This is a Heading</h1>
-    <p onclick="changetitle2()">This is a paragraph.</p>
-
-  <script>
-  function changetitle1(){
-    document.title = "Changetitle1 worked.";
-  }
-  function changetitle2(){
-    window.top.document.title = "Changetitle2 worked.";
-  }
-  </script>
-</body>
-</html>
-</xmp>
+<body style="margin: 0;">
+  <iframe src="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_default" style="width: 100%; height: 100%;"></iframe>
